--- a/index.html
+++ b/index.html
@@ -256,7 +256,6 @@
             <div class="admin-panel" id="adminPanel">
                 <h2>Admin Panel</h2>
                 <div class="nav-buttons">
-                    <button onclick="uploadNewCSV()">Upload New CSV</button>
                     <button onclick="showAddModal()">Add New Row</button>  
                     <button onclick="editCurrentCSV()">Edit Current CSV</button>
                     <button onclick="saveChanges()">Save Changes</button>
@@ -264,7 +263,10 @@
             </div>
 
             <div class="nav-buttons" id="fileButtons">
-                <!-- File buttons will be added here by JavaScript -->
+                <button onclick="loadCSV('urban.csv')">Urban</button>
+                <button onclick="loadCSV('patroli.csv')">Patroli</button>
+                <button onclick="loadCSV('mandorline.csv')">Mandorline</button>
+                <button onclick="loadCSV('pemadaman.csv')">Pemadaman</button>
             </div>
         </div>
 
@@ -317,44 +319,11 @@
         document.addEventListener('DOMContentLoaded', function() {
             // Load urban.csv by default
             loadCSV('urban.csv');
-            // Also fetch available files
-            fetchCSVFiles();
         });
 
         // Fetch available CSV files
         async function fetchCSVFiles() {
-            try {
-                const response = await fetch(window.location.href);
-                const text = await response.text();
-                const parser = new DOMParser();
-                const html = parser.parseFromString(text, 'text/html');
-                const links = Array.from(html.querySelectorAll('a'))
-                    .map(a => a.getAttribute('href'))
-                    .filter(href => href?.endsWith('.csv'))
-                    .map(href => href.split('/').pop());
-                
-                const fileButtons = document.getElementById('fileButtons');
-                fileButtons.innerHTML = '';
-                
-                links.forEach(file => {
-                    const button = document.createElement('button');
-                    button.textContent = file.replace('.csv','');
-                    button.onclick = () => loadCSV(file);
-                    fileButtons.appendChild(button);
-                });
-            } catch (error) {
-                console.error('Error fetching CSV files:', error);
-                // Fallback to mock files if API fails
-                const mockFiles = ['urban.csv', 'data1.csv', 'data2.csv', 'employees.csv'];
-                const fileButtons = document.getElementById('fileButtons');
-                fileButtons.innerHTML = '';
-                mockFiles.forEach(file => {
-                    const button = document.createElement('button');
-                    button.textContent = file.replace('.csv','');
-                    button.onclick = () => loadCSV(file);
-                    fileButtons.appendChild(button);
-                });
-            }
+            // No longer needed as we have fixed navigation buttons
         }
 
         // Load and display CSV file
@@ -664,3 +633,4 @@ Value4,Value5,Value6`;
     </script>
 </body>
 </html>
+
