--- a/index.html
+++ b/index.html
@@ -1,71 +1,126 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PJ BATUR</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+        }
+
+        .header {
+            background-color: #003366;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+            position: relative;
+        }
+
+        .menu-btn {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            cursor: pointer;
+            color: white;
+            font-size: 24px;
+        }
+
+        .sidebar {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            top: 0;
+            right: 0;
+            background-color: #002244;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+            z-index: 1;
+        }
+
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #001133;
+            color: #ffd700;
+        }
+
+        .sidebar .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+        .content {
+            width: 100%;
+            text-align: center;
+            padding: 20px;
+            transition: margin-right .5s;
+        }
+
+        .main-image {
+            max-width: 100%;
+            height: auto;
+            margin: 20px 0;
+        }
+
+        @media screen and (max-height: 450px) {
+            .sidebar {padding-top: 15px;}
+            .sidebar a {font-size: 18px;}
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <div class="header">
         <h1>PJ BATUR</h1>
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#patroli-row">Patroli ROW</a></li>
-                <li><a href="#urban">Urban</a></li>
-                <li><a href="#mandorline">Mandorline</a></li>
-                <li><a href="#pemadaman">Pemadaman</a></li>
-                <li><a href="#kct">KCT</a></li>
-                <li><a href="#vkln">VKRN</a></li>
-                <li><a href="#ct-gambar">CT Dengan Gambar</a></li>
-                <li><a href="#ct-manual">CT Manual</a></li>
-                <li><a href="#k3">K3</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="patroli-row">
-            <h2>Patroli ROW</h2>
-            <p>Konten untuk Patroli ROW.</p>
-        </section>
-        <section id="urban">
-            <h2>Urban</h2>
-            <p>Konten untuk Urban.</p>
-        </section>
-        <section id="mandorline">
-            <h2>Mandorline</h2>
-            <p>Konten untuk Mandorline.</p>
-        </section>
-        <section id="pemadaman">
-            <h2>Pemadaman</h2>
-            <p>Konten untuk Pemadaman.</p>
-        </section>
-        <section id="kct">
-            <h2>KCT</h2>
-            <p>Konten untuk KCT.</p>
-        </section>
-        <section id="vkln">
-            <h2>VKRN</h2>
-            <p>Konten untuk VKRN.</p>
-        </section>
-        <section id="ct-gambar">
-            <h2>CT Dengan Gambar</h2>
-            <p>Konten untuk CT Dengan Gambar.</p>
-        </section>
-        <section id="ct-manual">
-            <h2>CT Manual</h2>
-            <p>Konten untuk CT Manual.</p>
-        </section>
-        <section id="k3">
-            <h2>K3</h2>
-            <p>Konten untuk K3.</p>
-        </section>
-    </main>
-    <script src="script.js"></script>
+        <div class="menu-btn" onclick="openNav()">☰</div>
+    </div>
+
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="#patroli">Patroli ROW</a>
+        <a href="#urban">Urban</a>
+        <a href="#mandorline">Mandorline</a>
+        <a href="#pemadaman">Pemadaman</a>
+        <a href="#kct">KCT</a>
+        <a href="#vkrn">VKRN</a>
+        <a href="#ct-gambar">CT Dengan Gambar</a>
+        <a href="#ct-manual">CT Manual</a>
+        <a href="#k3">K3</a>
+    </div>
+
+    <div class="content" id="main">
+        <img src="batur.jpg" alt="Batur" class="main-image">
+        <!-- Konten halaman akan ditampilkan di sini -->
+    </div>
+
+    <script>
+        function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginRight = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginRight = "0";
+        }
+    </script>
 </body>
 </html>
