--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="menu-icon"></div>
         <div class="menu-icon"></div>
     </div>
-
+     
     <div class="overlay" id="overlay" onclick="closeMenu()"></div>
 
     <div id="mySidebar" class="sidebar">
@@ -36,6 +36,27 @@
                 <img src="batur.jpg" alt="Batur">
             </div>
         </div>
+        <div id="mandorline" class="page">
+    <div class="header">
+        <h1>Mandorline</h1>
+    </div>
+    <div class="content-body">
+        <div class="table-container">
+            <table id="mandorlineTable" class="data-table">
+                <thead>
+                    <tr>
+                        <th>Loading...</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Memuat data dari mandorline.csv...</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
         <div id="urban" class="page">
             <div class="header">
@@ -59,15 +80,7 @@
             </div>
         </div>
 
-        <div id="mandorline" class="page">
-            <div class="header">
-                <h1>Mandorline</h1>
-            </div>
-            <div class="content-body">
-                <p>Konten halaman Mandorline akan ditampilkan di sini.</p>
-            </div>
-        </div>
-
+        
         <div id="pemadaman" class="page">
             <div class="header">
                 <h1>Pemadaman</h1>
