--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
 
 <div class="bg-white rounded-xl shadow-lg p-6 w-full max-w-md mx-auto">
-    <h1 class="text-3xl font-bold text-center text-gray-800 mb-2">WhatsApp Dengan Foto</h1>
+    <h1 class="text-3xl font-bold text-center text-gray-800 mb-2">WA Dengan Foto</h1>
     <p class="text-center text-gray-500 mb-6">Unggah foto untuk mendeteksi nomor telepon</p>
 
     <!-- Kotak pesan untuk notifikasi -->
